--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.2.3",
         "multer": "^1.4.5-lts.1",
+        "nodemailer": "^6.9.4",
         "nodemon": "^2.0.22",
         "path": "^0.12.7",
         "typescript": "^5.1.3",
