Updated env file

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,12 @@
-MONGO_USERNAME="amrendra8336"
-MONGO_PASSWORD="NokiaN10"
+MONGO_USERNAME=""
+MONGO_PASSWORD=""
 SERVER_PORT="9090"
 JWT_SECRET=""
+
+MAIL_SERVICE_NAME="gmail"
+MAIL_USERNAME="nuggets.meeting.summary@gmail.com"
+MAIL_PASSWORD=""
+
+AWS_ACCESS_KEY = 
+AWS_SECRET_KEY = 
+AWS_BUCKET_NAME = 
